# webview2_uiaccess_test

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  Win32WebviewTemplate.manifest  Win32WebviewTemplate.props  ZSignFirst.ps1  ZSignLater.ps1
html/: body.html  index.html
scripts/: prepare_env.py
scripts/config_files/: CMakeLists.txt
src/: common_utils.cpp  common_utils.h  main.cpp  main.h  my_webveiw.cpp  my_webview.h
